syntax = "proto3"

import "google/protobuf/timestamp.proto";

enum MLTaskInstanceStatus {
  QUEUED = 0;
  RUNNING = 1;
  FAILED = 2;
  FINISHED = 3;
  TERMINATED = 4;
}

message Obj_MLProject {
  required string id = 1;
  required google.protobuf.Timestamp createdAt = 2;
  required google.protobuf.Timestamp updatedAt = 3;
  required bool isDeleted = 4;
  required string imageName = 5;
  required string name = 6;
}

message Stub_MLProject {
  required string imageName = 1;
  required string name = 2;
}

message Obj_MLTask {
  required string id = 1;
  required google.protobuf.Timestamp createdAt = 2;
  required google.protobuf.Timestamp updatedAt = 3;
  required bool isDeleted = 4;
  required string name = 5;
  required string projectRefID = 6;
  required string version = 7;
}

message Stub_MLTask {
  required string name = 1;
  required string projectRefID = 2;
  required string version = 3;
}

message Obj_MLTaskInstance {
  required string id = 1;
  required google.protobuf.Timestamp createdAt = 2;
  required google.protobuf.Timestamp updatedAt = 3;
  required bool isDeleted = 4;
  required string projectRefID = 5;
  required MLTaskInstanceStatus status = 6;
  required string taskRefID = 7;
}

message Obj_MLTaskInstanceMessage {
  required string id = 1;
  required google.protobuf.Timestamp createdAt = 2;
  required google.protobuf.Timestamp updatedAt = 3;
  required bool isDeleted = 4;
  required string payload = 5;
  required string taskInstanceRefID = 6;
}

message Stub_MLTaskInstanceMessage {
  required string payload = 1;
  required string taskInstanceRefID = 2;
}

message Req_MLProjects {}

message Req_MLTasksForProject {
  required string projectRefID = 1;
}

message Req_MLTaskInstancesForTask {
  required string taskRefID = 1;
  optional MLTaskInstanceStatus status = 2;
}

message Req_MLTaskInstanceMessagesForTaskInstance {
  required string taskInstanceRefID = 1;
}

message Req_StartMLTask {}

service MLService {
  rpc GetProjects(Req_MLProjects) returns (stream Obj_MLProject);
  rpc GetTasksForProject(Req_MLTasksForProject) return (stream Obj_MLTask);
  rpc GetTaskInstancesForTask(Req_MLTaskInstancesForTask) returns (stream Obj_MLTaskInstance);
  rpc GetTaskInstancesMessagesForTaskInstance(Req_MLTaskInstanceMessagesForTaskInstance) returns (stream Obj_MLTaskInstanceMessage);

  rpc CreateMLProject(Stub_MLProject) returns (Obj_MLProject);
  rpc CreateMLTask(Stub_MLTask) returns (Obj_MLTask);
  rpc CreateMLTaskInstanceMessage(Stub_MLTaskInstanceMessage) returns (Obj_MLTaskInstanceMessage);

  rpc StartMLTask(Req_StartMLTask) returns (Obj_MLTaskInstance);
}